<resources>
    <string name="app_name">My Application</string>
    <string name="hola">Hola</string>
    <string name="bye">Bye</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="title">SCP DATA</string>
    <string name="item_number">Item #</string>
    <string name="safe">Safe</string>
    <string name="euclid">Euclid</string>
    <string name="keter">Keter</string>
    <string name="alias">Alias</string>
    <string name="favorite">Favorite</string>
    <string name="confidential">Confidential</string>
    <string name="secret">Secret</string>
    <string name="unrestricted">Unrestricted</string>
    <string name="restricted">Restricted</string>
    <string name="top_secret">Top Secret</string>
    <string name="classification">CLASSIFICATION</string>
    <string name="additional_notes">ADDITIONAL NOTES</string>
    <string name="distruption_class">Distruption Class</string>
    <string name="risk_class">Risk Class</string>
    <string name="_0_0">0/0</string>
    <string name="description">DESCRIPTION</string>
    <string name="actualizar">Actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar">Editar</string>
    <string name="lista">Lista</string>
    <string name="add">Add</string>
    <string name="scps">SCPs</string>
    <string name="sites">Sites</string>
    <string name="site_data">SITE DATA</string>
    <string name="site_code">Site Code</string>
    <string name="location">Location</string>
    <string name="security_level">Security Level</string>
    <string name="director">Director</string>
    <string name="associated_sites">Associated Sites</string>
</resources>